<resources>
    <string name="app_name">Parent\'s Care</string>


    <string name="action_settings">Settings</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Logged in !</string>
    <string name="signed_out">You are not logged in !</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Login</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_parents_nav">ParentsNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="facebook_app_id">130078661200310</string>
    <string name="fb_login_protocol_scheme">fb130078661200310</string>
    <string name="title_activity_child_nav">ChildNav</string>
    <string name="nav_header_title">Android Studio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <style name="MyToolbarStyle" parent="ThemeOverlay.AppCompat.ActionBar">

        <item name="android:textColorPrimary">@color/WHITE</item>

        <item name="android:actionMenuTextColor">@color/WHITE</item>
        <!-- android:textColorSecondary is the color of the menu
             overflow icon (three vertical dots) -->
        <item name="android:textColorSecondary">@color/WHITE</item>
    </style>


    <string name="title">Medicine Reminder</string>
    <string name="managemedicine">Manage Medicine</string>
    <string name="medicine_review">Medicine Review</string>
    <string name="setting">Setting</string>
    <string name="hour_minutes">HH:mm</string>
    <string name="dateformate">dd/MM/yyyy</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="schedule_prompt">Select one</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="medicine_name">Medicine name</string>
    <string name="schedule">Schedule</string>
    <string name="start_date">Start date</string>
    <string name="duration">Duration</string>
    <string name="minus">-</string>
    <string name="duration_days">Duration(days)</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="medicine_type">Medicine Type</string>
    <string name="no_medicine_found">No medicine found</string>
    <string name="medicine_dashboard">Medicine Dashboard</string>
    <string name="update">Update</string>

    <string name="resedule">Resedule</string>
    <string name="not_taken">Not taken</string>
    <string name="taken">Taken</string>
    <string name="all_medicine">All medicine</string>
    <string name="delete">Delete</string>

    <string-array name="schedule_arrays">
        <item>Once a day</item>
        <item>Twice a day</item>
        <item>3 times a day</item>
        <item>4 times a day</item>
        <item>5 times per day</item>

    </string-array>
    <string-array name="take_arrays">
        <item>Tablet</item>
        <item>Insulin</item>
        <item>Syrup</item>

    </string-array>
    <string-array name="tablet_arrays">
        <item>1 tab</item>
        <item>2 tab</item>
        <item>3 tab</item>
        <item>4 tab</item>

    </string-array>
    <string-array name="liquied_arrays">
        <item>0.5 ml</item>
        <item>1.00 ml</item>
        <item>1.25 ml</item>
        <item>1.50 ml</item>
        <item>1.75 ml</item>
        <item>2.00 ml</item>

    </string-array>


</resources>

