<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eef1f2"
    android:orientation="vertical"
    android:weightSum="6"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Parentslogin">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#336fcf"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="#f3f7f7">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.3"
        android:background="#f1f4f5"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/title_text"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:padding="20dp"
            android:theme="@style/ThemeOverlay.MyTitleText" />

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="You are not logged in !"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorAccent"
            android:textSize="30dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detail"
                style="@style/ThemeOverlay.MyTextDetail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                tools:text="Verification Sucessfully" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail"
                android:layout_centerHorizontal="true"
                android:padding="5dp"
                android:visibility="gone" />

        </RelativeLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2.7"
        android:background="#ffffff"
        android:gravity="center_vertical">


        <LinearLayout
            android:id="@+id/phone_auth_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3.0">

                <EditText
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="#000"
                    android:id="@+id/field_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_phone_black_24dp"
                    android:drawablePadding="7dp"
                    android:hint="@string/hint_phone_number"
                    android:inputType="phone"
                    android:textColorHint="#7e2c3f"
                    android:theme="@style/ThemeOverlay.MyLightEditText" />


            </LinearLayout>
            <EditText
                android:layout_marginLeft="105.0dip"
                android:textColor="#000"
                android:id="@+id/field_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_verification_code"
                android:inputType="number"
                android:textColorHint="#7e2c3f"
                android:theme="@style/ThemeOverlay.MyLightEditText" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3.0">

                <Button
                    android:id="@+id/button_start_verification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/start_phone_auth"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />


                <Button
                    android:id="@+id/button_verify_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/verify_phone_auth"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />

                <Button
                    android:id="@+id/button_resend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/resend_phone_auth"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signed_in_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:weightSum="1.0">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="Sign Out"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>