<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6"
    android:background="#cfd8dc"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Parentslogin">

    <LinearLayout
        android:background="#cfd8dc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="59sp"
            app:layout_collapseMode="pin"
            android:background="#0d1e8c"
            app:titleTextColor="#59dfd2"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        </android.support.v7.widget.Toolbar>


        <TextView
            android:id="@+id/title_text"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:padding="20dp"
            android:theme="@style/ThemeOverlay.MyTitleText" />

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorAccent"
            android:textSize="30dp"
            android:text="You are not logged in !" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detail"
                style="@style/ThemeOverlay.MyTextDetail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                tools:text="Verification Sucessfully" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_below="@+id/detail"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:padding="5dp"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2.6"
        android:background="#cfd8dc"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/phone_auth_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/name_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_account_24dp"
                android:drawablePadding="7dp"
                android:hint="Enter Your Name"
                android:textColorHint="#7e2c3f" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2.0">

                <EditText
                    android:id="@+id/field_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone_number"
                    android:textColorHint="#7e2c3f"
                    android:theme="@style/ThemeOverlay.MyLightEditText"
                    android:layout_weight="1.0"
                    android:inputType="phone"
                    android:drawablePadding="7dp"
                    android:drawableLeft="@drawable/ic_phone_black_24dp"/>

                <EditText
                    android:id="@+id/field_verification_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_verification_code"
                    android:textColorHint="#7e2c3f"
                    android:theme="@style/ThemeOverlay.MyLightEditText"
                    android:layout_weight="1.0"
                    android:inputType="number"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3.0">

                <Button
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:id="@+id/button_start_verification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/start_phone_auth"/>

                <Button
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:id="@+id/button_verify_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/verify_phone_auth"/>

                <Button
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:id="@+id/button_resend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/resend_phone_auth"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signed_in_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:weightSum="1.0">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="Sign Out"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

        </LinearLayout>

    </RelativeLayout>



</LinearLayout>